<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/create"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <View
        android:layout_width="match_parent"
        android:background="#CCCCCC"
        android:layout_height="1dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="280dp"
        android:hint="@string/inputname"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_Btn"
            android:text="@string/sure"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/can_Btn"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
