<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hdu.wsn.uDiskReader.ui.FileActivity">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pre_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="调试信息"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/pre_folder"
            android:layout_toEndOf="@+id/pre_folder"/>


    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar"
        android:layout_above="@+id/ll_3"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:drawableTop="@drawable/remove_select"/>

        <TextView
            android:id="@+id/cut_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cut"
            android:drawableTop="@drawable/cut_select"/>
        <TextView
            android:id="@+id/copy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/copy"
            android:drawableTop="@drawable/copy_select"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:drawableTop="@drawable/cancel_select"/>

        <TextView
            android:id="@+id/paste_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/paste"
            android:drawableTop="@drawable/paste_select"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create"
            android:drawableTop="@drawable/create_select"/>

        <TextView
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/refresh"
            android:drawableTop="@drawable/refresh_select"/>

        <TextView
            android:id="@+id/equal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/equal"
            android:drawableTop="@drawable/cloud_select"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_show"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_show"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_show"
            android:padding="5dp"
            android:text="正在上传..."
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
